add pep8 checking in testing.

--- a/tox.ini
+++ b/tox.ini
@@ -4,5 +4,6 @@ envlist = py27,py33,py34,pypy
 deps =
     pytest
     pytest-cov
+    pytest-pep8
 commands =
-    py.test --cov base36.py
+    py.test --pep8 --cov base36.py
