--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 install:
   - "pip install ."
   - "pip install pytest pytest-cov pytest-pep8 coveralls"
-script: "py.test --pep8 --cov base36.py"
+script: "py.test"
 after_success: "coveralls"
 branches:
   only:
